syntax = "proto3";
option java_package = "com.example.demo.grpc.proto.user";
option java_multiple_files = false;

message UserResponse{
  int32 status=1;
  string result=2;
}

message UserAddRequest{
  string username=1;
  string password=2;
}

service UserAddService{
  rpc addUser(UserAddRequest) returns (UserResponse);
  rpc addUserStream(stream UserAddRequest) returns(stream UserResponse);
}
service UserModifyService{

}